--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tesseract.js": "^4.1.0",
+    "typescript": "5.1.3",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.7",
+    "encoding": "^0.1.13"
   }
 }
