--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:YuvXp55F6xUpVS@db.nflwmfheszergepcbkuv.supabase.co:6543/postgres?pgbouncer=true"
+DATABASE_URL="postgresql://postgres:postgres@localhost:54322/postgres?pgbouncer=true"
 # YuvXp5#5F6xUpVS
