--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@mantine/core": "^6.0.13",
+    "@mantine/form": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "@mantine/next": "^6.0.13",
     "@prisma/client": "^4.15.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-ui-react": "^0.4.2",
@@ -16,21 +22,21 @@
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "lucide-react": "^0.241.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-hot-toast": "^2.4.1",
     "tesseract.js": "^4.1.0",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.7",
     "encoding": "^0.1.13",
     "server-only": "^0.0.1",
     "supabase": "^1.64.8"
