Auth, header and db migration yml

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:54322/postgres?pgbouncer=true"
-# YuvXp5#5F6xUpVS
+# YuvXp55F6xUpVS
