--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-hot-toast": "^2.4.1",
     "tesseract.js": "^4.1.0",
     "typescript": "5.1.3",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "encoding": "^0.1.13",
     "s3rver": "^3.7.1",
     "server-only": "^0.0.1",
